force-app/main/default/objects/Credit_Rating__c.object
<CustomObject>
    <description>Credit Ratings</description>
    <fields>
        <fullName>FICO_Score__c</fullName>
        <description>FICO Score</description>
        <inlineHelpText>FICO Score</inlineHelpText>
        <label>FICO Score</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Month__c</fullName>
        <label>Month</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rating__c</fullName>
        <description>Rating</description>
        <inlineHelpText>Rating</inlineHelpText>
        <label>Rating</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Poor</fullName>
                </value>
                <value>
                    <fullName>Fair</fullName>
                </value>
                <value>
                    <fullName>Good</fullName>
                </value>
                <value>
                    <fullName>Very Good</fullName>
                </value>
                <value>
                    <fullName>Exceptional</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>What_it_means__c</fullName>
        <description>what the rating means</description>
        <inlineHelpText>what the rating means</inlineHelpText>
        <label>What it means</label>
        <type>TextArea</type>
    </fields>
    <label>Credit Rating</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Credit Rating Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Credit Ratings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>